# Pomodoro-desktop-app

./: README.md  index.html  package-lock.json  package.json
src/: App.scss  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: TimerControls.scss  TimerControls.tsx  TimerDisplay.scss  TimerDisplay.tsx
src/hooks/: useSound.ts  useTimer.ts
src/styles/: _mixins.scss  _variables.scss  global.scss
